--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,27 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  <link rel="shortcut icon" href="https://www.lameco.nl/favicon.ico?v1" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-57x57.png?v1">
+  <link rel="apple-touch-icon" sizes="60x60" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-60x60.png?v1">
+  <link rel="apple-touch-icon" sizes="72x72" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-72x72.png?v1">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-76x76.png?v1">
+  <link rel="apple-touch-icon" sizes="114x114" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-114x114.png?v1">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-120x120.png?v1">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-144x144.png?v1">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://www.lameco.nl/frontend/img/favicon/apple-touch-icon-152x152.png?v1">
+  <link rel="icon" type="image/png" href="https://www.lameco.nl/frontend/img/favicon/favicon-32x32.png?v1" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://www.lameco.nl/frontend/img/favicon/favicon-96x96.png?v1" sizes="96x96">
+  <link rel="icon" type="image/png" href="https://www.lameco.nl/frontend/img/favicon/favicon-16x16.png?v1" sizes="16x16">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="/frontend/img/favicon/mstile-144x144.png?v1">
+  <meta name="theme-color" content="#ffffff">
+  <title>Laméco Dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
-  <title>DevConnector: A social network for developers</title>
 </head>
 
 <body>
