--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <div id="card"></div>
 </body>
 
 </html>
